update home controller
