# app/static/swagger/swagger.json
@@ -97,7 +97,7 @@
                   "password": {
                     "type": "string"
                   },
-                  "birthDate": {
+                  "birth_date": {
                     "type": "string"
                   }
                 }
@@ -159,9 +159,9 @@
             "type": "string"
           },
           {
-            "name": "birthDate",
+            "name": "birth_date",
             "in": "body",
-            "description": "The birthDate of the user",
+            "description": "The birth_date of the user",
             "required": true,
             "type": "string",
             "format": "date"
@@ -230,7 +230,7 @@
                 "password": {
                   "type": "string"
                 },
-                "birthDate": {
+                "birth_date": {
                   "type": "string"
                 }
               }
@@ -292,9 +292,9 @@
             "type": "string"
           },
           {
-            "name": "birthDate",
+            "name": "birth_date",
             "in": "body",
-            "description": "The birthDate of the user",
+            "description": "The birth_date of the user",
             "required": true,
             "type": "string",
             "format": "date"
